maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {  
  while(!estSurBiscuit){
    random3()
    if (random3=0){
      gauche()
    } else {
      droite()
    }
  }
 
}

